--- a/index.html
+++ b/index.html
@@ -1,44 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/diehyknwd/image/upload/v1733356534/favicon_u1ktel.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Select Your Language</title>
+  <style>
+    body {
+      font-family: Tahoma, Arial, sans-serif;
+      background-color: #ffffff;
+      color: #000000;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      color: #1E90FF;
+    }
+
+    .language-container {
+      margin-top: 20px;
+    }
+
+    select, button {
+      font-size: 16px;
+      padding: 10px;
+      margin: 10px;
+      cursor: pointer;
+    }
+
+    button {
+      background-color: #1E90FF;
+      color: white;
+      border: none;
+    }
+
+    button:hover {
+      background-color: #0066cc;
+    }
+  </style>
 </head>
 <body>
-    <h1 id="welcome-message">Welcome to the site!</h1>
-    <label for="language-select">Choose Language:</label>
+
+  <h1>Welcome! Please select your language:</h1>
+
+  <div class="language-container">
+    <label for="language-select">🌍 Choose Language:</label>
     <select id="language-select">
-        <option value="en-nz">English (NZ)</option>
-        <option value="ja">日本語 (Japanese)</option>
+      <option value="en-nz">English (NZ)</option>
+      <option value="ja">日本語 (Japanese)</option>
     </select>
+    <br>
+    <button onclick="submitLanguage()">Continue</button>
+  </div>
 
-    <script>
-        const translations = {
-            "en-nz": {
-                welcome: "Welcome to the site!",
-            },
-            "ja": {
-                welcome: "サイトへようこそ！",
-            }
-        };
+  <script>
+    function submitLanguage() {
+      const selectedLang = document.getElementById('language-select').value;
+      localStorage.setItem('preferredLanguage', selectedLang);
+      window.location.href = `/${selectedLang}/index.html`; // Redirect
+    }
 
-        function setLanguage(lang) {
-            localStorage.setItem('preferredLanguage', lang);
-            window.location.href = `/${lang}/index.html`;  // Redirect to new language page
-        }
+    // Auto-select the saved language
+    document.getElementById('language-select').value = localStorage.getItem('preferredLanguage') || 'en-nz';
+  </script>
 
-        function loadLanguage() {
-            const preferredLang = localStorage.getItem('preferredLanguage') || 'en-nz';
-            document.getElementById('language-select').value = preferredLang;
-            document.getElementById('welcome-message').textContent = translations[preferredLang].welcome;
-        }
-
-        document.getElementById('language-select').addEventListener('change', function() {
-            setLanguage(this.value);
-        });
-
-        loadLanguage(); // Load on page load
-    </script>
 </body>
 </html>
