https://cbgames-xyz.github.io/langhtml/ and https://cbgames-xyz.vercel.app/

--- a/en-nz/index.html
+++ b/en-nz/index.html
@@ -70,7 +70,7 @@
       right: 20px;
     }
   </style>
-  <link rel="stylesheet" href="/updatedtooltip.css"> <!--TooltipCSSAPI-->
+  <link rel="stylesheet" href="https://cbgames-xyz.vercel.app/updatedtooltip.css"> <!--TooltipCSSAPI-->
 </head>
 <body>
   <!-- Language Dropdown -->
