--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 <body>
     <h1 id="title">404 - Page Not Found</h1>
     <p id="message">The page you are looking for does not exist.</p>
-    <a href="./index.html" id="home-link">Go Back Home</a>
+    <a href="https://cbgames-xyz.github.io/langhtml/" id="home-link">Go Back Home</a>
 
     <script>
         const translations = {
