--- a/en-nz/index.html
+++ b/en-nz/index.html
@@ -121,7 +121,7 @@
 
     function setLanguage(lang) {
       localStorage.setItem('preferredLanguage', lang);
-      window.location.href = `./${lang}/index.html`; // Redirect to selected language page
+      window.location.href = `../${lang}/index.html`; // Redirect to selected language page
     }
 
     function loadLanguage() {
