--- a/en-nz/index.html
+++ b/en-nz/index.html
@@ -36,6 +36,7 @@
 
     /* Content Section */
     .content {
+    flex: 0;
       margin: 20px;
       padding: 15px;
       border: 1px solid #c0c0c0;
@@ -70,7 +71,6 @@
       right: 20px;
     }
   </style>
-  <link rel="stylesheet" href="https://cbgames-xyz.vercel.app/updatedtooltip.css"> <!--TooltipCSSAPI-->
 </head>
 <body>
   <!-- Language Dropdown -->
@@ -102,9 +102,6 @@
   <div class="footer">
     &copy; 2004 GovernmentMockup. All Rights Reserved.
   </div>
-  <div id="content-placeholder"></div> <!--TooltipHTMLAPI-->
-  <script src="https://cbgames-xyz.vercel.app/updatedtooltip.js"></script> <!--TooltipJSAPI--> 
-
   <script>
     const translations = {
       "en-nz": {
