--- a/en-nz/index.html
+++ b/en-nz/index.html
@@ -36,7 +36,6 @@
 
     /* Content Section */
     .content {
-    flex: 0;
       margin: 20px;
       padding: 15px;
       border: 1px solid #c0c0c0;
@@ -57,11 +56,15 @@
 
     /* Footer */
     .footer {
-      text-align: center;
-      padding: 10px;
-      font-size: 12px;
-      background-color: #e6e6e6;
-      border-top: 1px solid #c0c0c0;
+        text-align: center;
+        padding: 10px;
+        font-size: 12px;
+        background-color: #e6e6e6;
+        border-top: 1px solid #c0c0c0;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
     }
 
     /* Language Selector */
